[修改] 頁面細節

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.isProduction ? '' : 'dev - ' %>电商后台管理系统</title>
+    <title><%= htmlWebpackPlugin.options.isProduction ? '' : '' %>後台管理系统</title>
     <% if(htmlWebpackPlugin.options.isProduction) { %>
     <!-- 生产环境下通过CDN加载依赖文件 -->
     <link rel="stylesheet" href="https://cdn.staticfile.org/nprogress/0.2.0/nprogress.min.css" />
