[新增]不能修改活動判斷

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>btcbox_icon.jpg">
+    <link rel="icon" href="<%= BASE_URL %>//btcbox_icon.jpg">
     <title><%= htmlWebpackPlugin.options.isProduction ? '' : '' %>後台管理系统</title>
     <% if(htmlWebpackPlugin.options.isProduction) { %>
     <!-- 生产环境下通过CDN加载依赖文件 -->
