[修改] 文字樣式

--- a/src/assets/fonts/demo_fontclass.html
+++ b/src/assets/fonts/demo_fontclass.html
@@ -6,6 +6,7 @@
     <title>IconFont</title>
     <link rel="stylesheet" href="demo.css">
     <link rel="stylesheet" href="iconfont.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main markdown">
